---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: ??.??.2025
  Bugfixes:
    - Fixed energy consumption not being shown correctly.
  Compatibility:
    - Added compatibility with Krastorio 2 Spaced Out vehicles.
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 10.06.2025
  Changes:
    - Radar Equipment is now unlocked by a decicated technology.
  Compatibility:
    - Added compatibility with Krastorio 2 vehicles.
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 01.11.2024
  Locale:
    - Simplified Chinese translation by Houraiji_Kyuusyou.
  Bugfixes:
    - Fixed possible crash to desktop with Spidertron Enhancements' remote.
    - Fixed possible crash with empty spidertron remote selection.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 30.10.2024
  Changes:
    - Lower radar coverage latency. Now keeps up with legendary tanks with legendary legs.
  Bugfixes:
    - Removed visible quality icon from hidden entity.
    - Fixed spidertron remote selecting hidden entity (for the most part).
  Locale:
    - Russian translation by Shadow_man.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 26.10.2024
  Bugfixes:
    - Fix startup crash with Spidertron Enhancements.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 25.10.2024
  Bugfixes:
    - Fix rare case where radar might break if multiple radars are placed in grid.
    - Fix equipment power drain only happening at night.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 25.10.2024
  Features:
    - Add Radar Equipment