@@ -15,3 +15,6 @@ radar-equipment=Radar Equipment
 
 [technology-description]
 radar-equipment=Allows the construction of radar equipment which provides radar coverage when placed in equipment grids.
+
+[radar-equipment]
+radar-equipement-description=[color=#fae8be][font=default-semibold]Coverage dist:[/font][/color] __1__
